Add contact information (email & Telegram) to index.html

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
 <section class="contact">
     <h2>Contact</h2>
-    <a href="mailto:youremail@example.com">Email Me</a>
-    <a href="https://t.me/yourusername" target="_blank">Telegram</a>
+    <a href="mailto:elaheh.akb1987@gmail.com">Email Me</a>
+    <a href="https://t.me/elahehakb" target="_blank">Telegram</a>
 </section>
 
 <footer>
